header and 2 sections done

--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
   </head>
   <body>
     <header>
+      <img src="images/logo.svg" alt="" />
       <h2>A history of everything you copy</h2>
       <p>
         Clipboard allows you to track and organize everything you copy.
         Instantly access your clipboard on all your devices.
       </p>
-      <a href="">Download for iOS</a>
-      <a href="">Download for Mac</a>
+      <a href="" class="download-link">Download for iOS</a>
+      <a href="" class="download-link download-link--mac">Download for Mac</a>
     </header>
 
-    <section>
+    <section class="keep-track">
       <h2>Keep track of your snippets</h2>
       <p>
         Clipboard instantly stores any item you copy in the cloud, meaning you
         can access your snippets immediately on all your devices. Our Mac and
         iOS apps will help you organize everything.
       </p>
+      <img src="images/image-computer.png" alt="" />
       <h3>Quick Search</h3>
       <p>
         Easily search your snippets by content, category, web address,
@@ -47,12 +49,13 @@
       </p>
     </section>
 
-    <section>
-      <h2>Access Clipboard anywhere</h2>
+    <section class="access-anywhere">
+      <h2>Access Clipboard Anywhere</h2>
       <p>
         Whether you’re on the go, or at your computer, you can access all your
         Clipboard snippets in a few simple clicks.
       </p>
+      <img src="images/image-devices.png" alt="" />
     </section>
 
     <section>
@@ -75,8 +78,8 @@
         Available for free on the App Store. Download for Mac or iOS, sync with
         iCloud and you’re ready to start adding to your clipboard.
       </p>
-      <a href="">Download for iOS</a>
-      <a href="">Download for Mac</a>
+      <a href="" class="download-link">Download for iOS</a>
+      <a href="" class="download-link download-link--mac">Download for Mac</a>
     </section>
 
     <footer>
