--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <img src="images/logo.svg" alt="" />
-      <h2>A history of everything you copy</h2>
-      <p>
+      <h2 class="main--h2">A history of everything you copy</h2>
+      <p class="main--p">
         Clipboard allows you to track and organize everything you copy.
         Instantly access your clipboard on all your devices.
       </p>
@@ -29,52 +29,69 @@
     </header>
 
     <section class="keep-track">
-      <h2>Keep track of your snippets</h2>
-      <p>
+      <h2 class="main--h2">Keep track of your snippets</h2>
+      <p class="main--p">
         Clipboard instantly stores any item you copy in the cloud, meaning you
         can access your snippets immediately on all your devices. Our Mac and
         iOS apps will help you organize everything.
       </p>
       <img src="images/image-computer.png" alt="" />
-      <h3>Quick Search</h3>
-      <p>
+      <h3 class="main--h3">Quick Search</h3>
+      <p class="main--p">
         Easily search your snippets by content, category, web address,
         application, and more.
       </p>
-      <h3>iCloud Sync</h3>
-      <p>Instantly saves and syncs snippets across all your devices.</p>
-      <h3>Complete History</h3>
-      <p>
+      <h3 class="main--h3">iCloud Sync</h3>
+      <p class="main--p">
+        Instantly saves and syncs snippets across all your devices.
+      </p>
+      <h3 class="main--h3">Complete History</h3>
+      <p class="main--p">
         Retrieve any snippets from the first moment you started using the app.
       </p>
     </section>
 
     <section class="access-anywhere">
-      <h2>Access Clipboard Anywhere</h2>
-      <p>
+      <h2 class="main--h2">Access Clipboard Anywhere</h2>
+      <p class="main--p">
         Whether you’re on the go, or at your computer, you can access all your
         Clipboard snippets in a few simple clicks.
       </p>
       <img src="images/image-devices.png" alt="" />
     </section>
 
-    <section>
-      <h2>Supercharge your workflow</h2>
-      <p>We’ve got the tools to boost your productivity.</p>
-      <h3>Create blacklists</h3>
-      <p>
+    <section class="supercharge">
+      <h2 class="main--h2">Supercharge your workflow</h2>
+      <p class="main--p">We’ve got the tools to boost your productivity.</p>
+      <img src="images/icon-blacklist.svg" alt="" />
+      <h3 class="main--h3">Create blacklists</h3>
+      <p class="main--p">
         Ensure sensitive information never makes its way to your clipboard by
         excluding certain sources.
       </p>
-      <h3>Plain text snippets</h3>
-      <p>Remove unwanted formatting from copied text for a consistent look.</p>
-      <h3>Sneak preview</h3>
-      <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+      <img src="images/icon-text.svg" alt="" />
+      <h3 class="main--h3">Plain text snippets</h3>
+      <p class="main--p">
+        Remove unwanted formatting from copied text for a consistent look.
+      </p>
+      <img src="images/icon-preview.svg" alt="" />
+      <h3 class="main--h3">Sneak preview</h3>
+      <p class="main--p">
+        Quick preview of all snippets on your Clipboard for easy access.
+      </p>
     </section>
 
-    <section>
-      <h2>Clipboard for iOS and Mac OS</h2>
-      <p>
+    <section class="logos">
+      <img src="images/logo-google.png" alt="" />
+      <img src="images/logo-ibm.png" alt="" />
+      <img src="images/logo-microsoft.png" alt="" />
+      <img src="images/logo-hp.png" alt="" />
+      <img src="images/logo-vector-graphics.png" alt="" />
+    </section>
+
+    <section class="download">
+      <h2 class="main--h2">Clipboard for iOS and Mac OS</h2>
+      <p class="main--p">
         Available for free on the App Store. Download for Mac or iOS, sync with
         iCloud and you’re ready to start adding to your clipboard.
       </p>
@@ -83,11 +100,23 @@
     </section>
 
     <footer>
+      <img src="images/logo.svg" alt="" />
       <a href="">FAQs</a>
       <a href="">Contact Us</a>
       <a href="">Privacy Policy</a>
       <a href="">Press Kit</a>
       <a href="">Install Guide</a>
+      <div class="social-media">
+        <a href="">
+          <img src="images/icon-facebook.svg" alt="facebook" />
+        </a>
+        <a href="">
+          <img src="images/icon-twitter.svg" alt="twitter" />
+        </a>
+        <a href="">
+          <img src="images/icon-instagram.svg" alt="instagram" />
+        </a>
+      </div>
     </footer>
   </body>
 </html>
