--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
         Clipboard allows you to track and organize everything you copy.
         Instantly access your clipboard on all your devices.
       </p>
-      <a href="" class="download-link">Download for iOS</a>
-      <a href="" class="download-link download-link--mac">Download for Mac</a>
+      <div>
+        <a href="" class="download-link">Download for iOS</a>
+        <a href="" class="download-link download-link--mac">Download for Mac</a>
+      </div>
     </header>
 
     <section class="keep-track">
-      <h2 class="main--h2">Keep track of your snippets</h2>
-      <p class="main--p">
-        Clipboard instantly stores any item you copy in the cloud, meaning you
-        can access your snippets immediately on all your devices. Our Mac and
-        iOS apps will help you organize everything.
-      </p>
+      <div>
+        <h2 class="main--h2">Keep track of your snippets</h2>
+        <p class="main--p">
+          Clipboard instantly stores any item you copy in the cloud, meaning you
+          can access your snippets immediately on all your devices. Our Mac and
+          iOS apps will help you organize everything.
+        </p>
+      </div>
       <img src="images/image-computer.png" alt="" />
       <h3 class="main--h3">Quick Search</h3>
       <p class="main--p">
@@ -63,22 +67,28 @@
     <section class="supercharge">
       <h2 class="main--h2">Supercharge your workflow</h2>
       <p class="main--p">We’ve got the tools to boost your productivity.</p>
-      <img src="images/icon-blacklist.svg" alt="" />
-      <h3 class="main--h3">Create blacklists</h3>
-      <p class="main--p">
-        Ensure sensitive information never makes its way to your clipboard by
-        excluding certain sources.
-      </p>
-      <img src="images/icon-text.svg" alt="" />
-      <h3 class="main--h3">Plain text snippets</h3>
-      <p class="main--p">
-        Remove unwanted formatting from copied text for a consistent look.
-      </p>
-      <img src="images/icon-preview.svg" alt="" />
-      <h3 class="main--h3">Sneak preview</h3>
-      <p class="main--p">
-        Quick preview of all snippets on your Clipboard for easy access.
-      </p>
+      <div>
+        <img src="images/icon-blacklist.svg" alt="" />
+        <h3 class="main--h3">Create blacklists</h3>
+        <p class="main--p">
+          Ensure sensitive information never makes its way to your clipboard by
+          excluding certain sources.
+        </p>
+      </div>
+      <div>
+        <img src="images/icon-text.svg" alt="" />
+        <h3 class="main--h3">Plain text snippets</h3>
+        <p class="main--p">
+          Remove unwanted formatting from copied text for a consistent look.
+        </p>
+      </div>
+      <div>
+        <img src="images/icon-preview.svg" alt="" />
+        <h3 class="main--h3">Sneak preview</h3>
+        <p class="main--p">
+          Quick preview of all snippets on your Clipboard for easy access.
+        </p>
+      </div>
     </section>
 
     <section class="logos">
@@ -95,8 +105,11 @@
         Available for free on the App Store. Download for Mac or iOS, sync with
         iCloud and you’re ready to start adding to your clipboard.
       </p>
-      <a href="" class="download-link">Download for iOS</a>
-      <a href="" class="download-link download-link--mac">Download for Mac</a>
+      <div>
+        <a href="" class="download-link">Download for iOS</a>
+        <a href="" class="download-link download-link--mac">Download for Mac</a>
+        <div></div>
+      </div>
     </section>
 
     <footer>
